--- a/public/styles/vendor.css
+++ b/public/styles/vendor.css
@@ -1,4 +1,5 @@
 .github-corner-logo {
+  display: none;
   z-index: 1000;
   fill: var(--color-text);
   color: var(--color-background);
@@ -30,7 +31,10 @@
     transform: rotate(10deg);
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 700px) {
+  .github-corner-logo {
+    display: none;
+  }
   .github-corner:hover .octo-arm {
     animation: none;
   }
