--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -2,7 +2,14 @@
   --hero-height: calc(540px - var(--header-height));
   --hero-view: calc(800px - var(--header-height));
   --hero-max: 100vh;
+  --banner-height: 320px;
   --color-background: var(--color-midnight);
+}
+
+@media screen and (min-width: 768px) {
+  :root {
+    --banner-height: 500px;
+  }
 }
 
 .header:not(.header__revealed) .navbar-toggle {
@@ -83,7 +90,7 @@
   justify-content: center;
   position: absolute;
   min-height: var(--hero-height);
-  height: var(--hero-max);
+  max-height: var(--hero-max);
   width: 100%;
   background: rgb(5, 4, 34);
   background: -moz-linear-gradient(
@@ -302,30 +309,33 @@ form input[type="text"] {
   overflow: hidden;
 }
 
+.options-diagonal {
+  background-color: var(--color-pretty-in-pink);
+  height: var(--banner-height);
+  transform: rotate(-3deg);
+  z-index: 0;
+  margin-left: -10vw;
+  width: 120vw;
+  left: 0;
+}
+
 .options-content {
-  padding: 2rem calc(50% - (49rem / 2));
+  padding: 2rem var(--page-padding);
   margin: 0;
+  display: flex;
+  height: 100%;
+  max-width: 100vw;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  transform: rotate(3deg);
   max-width: 100%;
   position: relative;
-  background-color: var(--color-pretty-in-pink);
 }
 
 .options-content > * {
   position: relative;
   z-index: 1;
-}
-
-.options-content::before,
-.options-content::after {
-  background-color: var(--color-pretty-in-pink);
-  content: " ";
-  display: block;
-  height: 100px;
-  position: absolute;
-  transform: translate(-50%, 0) rotate(-3deg);
-  z-index: 0;
-  width: 250%;
-  left: 0;
 }
 
 .options-content::after {
