--- a/public/styles/shared.css
+++ b/public/styles/shared.css
@@ -446,7 +446,7 @@ YP   YP Y88888P YP   YP Y8888D' Y88888P 88   YD
   padding-top: 0;
   padding-bottom: 0;
   max-height: 0;
-  transition: max-height 350ms ease-in-out;
+  transition: max-height 250ms linear;
 }
 
 .navbar-toggle {
