--- a/public/styles/shared.css
+++ b/public/styles/shared.css
@@ -174,6 +174,10 @@ blockquote {
   font-style: italic;
 }
 
+img[alt=""] {
+  user-select: none;
+}
+
 /**
 db    db d888888b d888888b db      d888888b d888888b db    db
 88    88 `~~88~~'   `88'   88        `88'   `~~88~~' `8b  d8'
@@ -353,9 +357,8 @@ Y88888P YP   YP    YP     `Y88P'  ~Y8888P'    YP
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  font-size: var(--font-size-md);
-  text-transform: uppercase;
-  padding: 0.25rem 1.5rem 0.1rem;
+  font-size: var(--font-size-sm);
+  padding: 0.125rem 0.75rem 0.05rem;
   min-height: 3rem;
   font-weight: 600;
   border: 3px solid var(--color-midnight);
@@ -383,6 +386,32 @@ Y88888P YP   YP    YP     `Y88P'  ~Y8888P'    YP
 
 .button-bold[disabled] {
   opacity: 0.5;
+}
+
+.label,
+.input {
+  margin-bottom: 1rem;
+  padding: 0 1rem;
+  width: 100%;
+  border-radius: 8px;
+  height: 48px;
+  font-size: var(--font-size-sm);
+  font-family: var(--font-brand);
+}
+
+.input[type="text"] {
+  border: 2px solid var(--color-midnight);
+}
+
+@media screen and (min-width: 768px) {
+  .label,
+  .input,
+  .button {
+    font-size: var(--font-size-md);
+  }
+  .button {
+    padding: 0.25rem 1.5rem 0.1rem;
+  }
 }
 
 /**
